finally check and update cors handler
